--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="165dp"
         android:layout_marginTop="40dp"
-        android:background="@drawable/back02"
+        android:background="@drawable/back02"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -44,7 +44,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
-            android:background="@android:color/transparent"
+            android:background="@android:color/transparent"/>
 
      </RelativeLayout>
 
