--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,82 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0A1C34"
-    android:orientation="vertical"
+    android:background="@color/blue_4"
+    android:padding="20dp"
     tools:context=".MainActivity">
-
+    
+    <ImageView
+        android:id="@+id/iconIv"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/img"/>
+    
     <TextView
-        android:id="@+id/link_to_reg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alike_angular"
-        android:textColor="#fdfdfd"
-        android:layout_gravity="center"
-        android:layout_marginTop="120dp"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:text="Регистарция" />
-
-    <EditText
-        android:id="@+id/user_login"
-        android:layout_width="220dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:inputType="text"
-        android:textColorHint="#808080"
-        android:background="@null"
-        android:hint="Введите логин"
-        android:layout_margin="10dp"
-        android:padding="15dp"
-        android:drawableLeft="@drawable/baseline_person_outline_24"
-        android:drawablePadding="10dp"
-        android:textColor="@color/white"/>
-
-    <EditText
-        android:id="@+id/user_password"
+        android:layout_below="@id/iconIv"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="Добро пожаловать!"
         android:textColor="@color/white"
-        android:layout_width="220dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:textColorHint="#808080"
-        android:hint="Введите пароль"
-        android:layout_margin="10dp"
-        android:padding="15dp"
-        android:background="@null"
-        android:drawableLeft="@drawable/baseline_key_24"
-        android:drawablePadding="10dp"/>
+        android:textSize="16sp"/>
 
     <Button
-        android:id="@+id/button_reg"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:text="Зарегистрироваться"
-        android:textStyle="bold"
-        android:layout_gravity="center_horizontal"
-        android:backgroundTint="#2E4553"
-        android:layout_marginTop="15dp"
-        android:textColor="@color/white"/>
-
-    <TextView
-        android:id="@+id/link_to_auth"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="65dp"
-        android:fontFamily="sans-serif"
-        android:text="Уже есть аккаунт? Войти"
-        android:textColor="#fdfdfd"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/toTest"
+        android:id="@+id/loginBut"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/shape_button01"
+        android:text="Войти в аккаунт"
+        android:layout_above="@id/skipBut"
+        app:backgroundTint="@color/blue_2"
+        android:textColor="@color/white"/>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/skipBut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="Продолжить как гость"
+        app:backgroundTint="@color/blue_2"
+        android:textColor="@color/blue_1"
+        android:background="@drawable/shape_button02"/>
+
+</RelativeLayout>
