--- a/app/src/main/res/drawable/shape_edittext01.xml
+++ b/app/src/main/res/drawable/shape_edittext01.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"/>
-    <solid android:color="@color/blue_2"/>
+    <solid android:color="@color/blue_1"/>
+
+    <corners android:radius="10dp"/>
 
 </shape>
