--- a/app/src/main/res/drawable/shape_toolbar01.xml
+++ b/app/src/main/res/drawable/shape_toolbar01.xml
@@ -2,8 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"/>
     <solid android:color="@color/blue_2"/>
+
+    <corners android:bottomRightRadius="40dp"
+        android:bottomLeftRadius="40dp"/>
 
 </shape>
